Changes - adding UserController and routes
